--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,6 +1,9 @@
-<form id="search-form" class="well form-search">
-	<input id="search-query" type="text" value="<%=printQuery%>" class="input-xxlarge search-query">
-	<button type="submit" class="btn">
-		<i class="icon-search"></i> Search
-	</button>
+<form id="search-form" class="form-search">
+  <div class="control-group well">
+    <div class="controls">
+      <input id="search-query" type="text" value="<%=printQuery%>" style="width: 47%" class="search-query">
+      <button type="submit" class="btn">
+        <i class="icon-search"></i> Search</button>
+    </div>
+  </div>
 </form>
