--- a/app/templates/layouts/main.html
+++ b/app/templates/layouts/main.html
@@ -1,32 +1,41 @@
+<header class="row-fluid">
+  <div class="span12">
+    <ul class="nav nav-pills pull-right">
+      <li class="active">
+        <a href="#">Demo</a>
+      </li>
+      <li>
+        <a href="https://github.com/jbarroso/solritajs">Source</a>
+      </li>
+    </ul>
+    <h2>
+      <a class="brand" href="#">Solrita.js</a>
+      <small style="margin-top:0px;white-space: nowrap">Backbone.js client for
+        <a href="http://lucene.apache.org/solr/">Apache Solr</a>
+      </small>
+    </h2>
+  </div>
+</header>
 <div class="row-fluid">
-	<div class="span12">
-		<div class="page-header">
-			<h1>Solrita.js <small>a Backbone.js client for Apache Solr</small></h1>
-		</div>
-		<div id="search"></div>
-	</div>
+  <div class="span12">
+    <div id="search"></div>
+  </div>
 </div>
 <div id="filters"></div>
 <div class="row-fluid">
-	<div class="span9">
-		<div class="row-fluid">
-			<div id="results-header"></div>
-		</div>
-		<div class="row-fluid">
-			<ul id="results" class="unstyled"></ul>
-		</div>
-		<div class="row-fluid">
-			<div id="pagination"></div>
-		</div>
-	</div>
-	<div class="span3">
-		<div id="facets"></div>
-	</div>
+  <div class="span9">
+    <div class="row-fluid">
+      <div class="span12">
+          <div id="results-header" class="row-fluid"></div>
+      </div>
+    </div>
+    <div id="results" class="row-fluid"/>
+    <div id="pagination" class="row-fluid"></div>
+  </div>
+  <div id="facets" class="span3"></div>
 </div>
 <hr/>
 <footer>
-<div>
-	<span>Documentation: </span> <a href="http://lucene.apache.org/solr">Solr Home Page</a>, <a href="http://wiki.apache.org/solr">Solr Wiki</a>
-</div>
-<div>Disclaimer: The locations displayed in this demonstration are purely fictional.  It is more than likely that no store with the items listed actually exists at that location!</div>    
+  <p class="muted credit">
+    <a href="https://github.com/jbarroso">Jose Angel Barroso</a>| MIT Licence</p>
 </footer>
