--- a/app/templates/pagination.html
+++ b/app/templates/pagination.html
@@ -1,28 +1,34 @@
 <%if (total>0 && totalPages>1) { %>
-<div class="pagination pagination-centered">
-	<ul>
-		<li <%=(firstPage!=currentPage) ? '':'class="disabled"' %>>
-			<a href="search?<%=currentParams%>&start=0" class="serverfirst">&lt;&lt;</a>
-		</li>
+<div class="navbar">
+	<div class="navbar-inner">
+		<div class="pagination pagination-centered">
+			<ul>
+				<li <%=(isFirstPage) ? 'class="disabled"':'' %>>
+				<a href="<%=(isFirstPage) ? '#' : searchBase + '&start=0'%>" class="serverfirst">&lt;&lt;</a>
+				</li>
 
-		<li <%=(currentPage>firstPage) ? '':'class="disabled"'%>>
-			<a href="search?<%=currentParams%>&start=<%=(perPage*(currentPage-1))%>" 
-				class="serverprevious">&lt;</a>
-		</li>
+				<li <%=(isFirstPage) ? 'class="disabled"':'' %>>
+				<a href="<%=(isFirstPage) ? '#' : searchBase + '&start='+(perPage*(currentPage-1))%>" 
+					class="serverprevious">&lt;</a>
+				</li>
 
-		<% for(p=beginIndex;p<endIndex;p++){ %>
-		<li <%=(currentPage === p)? 'class="disabled"': '' %>>
-			<a href="search?<%=currentParams%>&start=<%=(perPage*p)%>" class="page"><%=p+1%></a>
-		</li>
-		<% } %>	
-		<li <%=(currentPage+1<totalPages) ? '':'class="disabled"'%>>
-			<a href="search?<%=currentParams%>&start=<%=(perPage*(currentPage+1))%>" 
-				class="servernext">&gt;</a>
-		</li>
-		<li <%=(lastPage!=currentPage+1) ? '':'class="disabled"'%>>
-			<a href="search?<%=currentParams%>&start=<%=(perPage*(totalPages-1))%>" 
-				class="serverlast">&gt;&gt;</a>
-		</li>
-	</ul>
+				<% for(p=beginIndex;p<endIndex;p++){ %>
+				<% var isCurrentPage = (currentPage === p);%>
+				<li <%=(isCurrentPage)? 'class="active"': '' %>>
+				<a href="<%=(isCurrentPage) ? '#': searchBase + '&start=' + (perPage*p)%>" class="page"><%=p+1%></a>
+				</li>
+				<% } %>	
+
+				<li <%=(isLastPage) ? 'class="disabled"': ''%>>
+				<a href="<%=(isLastPage) ? '#' : searchBase + '&start=' + (perPage*(currentPage+1))%>" 
+					class="servernext">&gt;</a>
+				</li>
+				<li <%=(isLastPage) ? 'class="disabled"': ''%>>
+				<a href="<%=(isLastPage) ? '#' : searchBase + '&start=' + (perPage*(totalPages-1))%>" 
+					class="serverlast">&gt;&gt;</a>
+				</li>
+			</ul>
+		</div>
+	</div>
 </div>
 <%}%>
