--- a/app/templates/results-header.html
+++ b/app/templates/results-header.html
@@ -1,18 +1,51 @@
 <% if(total>0) { %>
-<div style="float:left" class="span12">
-	<form class="form-inline" style="float:left">
-		<strong><%=total%></strong> results found in <%=qTime%> ms 
-		<span class="divider">/</span>
-		Page: <%=currentPage+1%> of <%=totalPages%> shown
-		<span class="divider">/</span>
-		<label for="num">Items per page:</label>
-		<div id="num" style="display: inline-block"/>
-		<label for="sort">Sort by:</label>
-		<div id="sort" style="display: inline-block"/>
-	</form>
-</div>
-<% } else { %>
-<div class="alert alert-warn">
-	No results found
-</div>
-<% } %>
+  <div class="navbar span12">
+    <div class="navbar-inner">
+      <div class="container">
+        <ul class="nav pull-left">
+          <li>
+            <p class="navbar-text"><span><strong><%=total%> </strong>results found in <%=qTime%>ms</span></p>
+          </li>
+        </ul>
+        <ul class="nav pull-right">
+          <li>
+            <ul class="pager navbar-text" style="margin:0">
+              <li class="<%=(isFirstPage) ? ' disabled':'' %>">
+                <a href="<%=(isFirstPage) ? '#' : searchBase + '&start='+(perPage*(currentPage-1))%>"><</a>
+              </li>
+              <li>
+                <strong>Page <%=currentPage+1%> </strong>of <%=totalPages%>
+              </li>
+              <li class="<%=(isLastPage) ? ' disabled':'' %>">
+                <a href="<%=(isLastPage) ? '#' : searchBase + '&start=' + (perPage*(currentPage+1))%>">></a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+        <a class="btn btn-navbar pull-right" data-toggle="collapse" data-target=".nav-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</a>
+        <div class="nav-collapse collapse">
+          <form class="form-inline" style="margin:0px">
+            <ul class="nav pull-right">
+              <li>
+                <label class="navbar-text" for="num">Items per page:</label>
+                <div id="num" style="display: inline-block" />
+              </li>
+              <li class="divider-vertical" />
+              <li>
+                <label class="navbar-text" for="sort">Sort by:</label>
+                <div id="sort" style="display: inline-block" />
+              </li>
+              <li class="divider-vertical" />
+            </ul>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <% } else { %>
+    <div class="alert alert-warn" class="span12">No results found</div>
+    <% } %>
