--- a/app/templates/layouts/main.html
+++ b/app/templates/layouts/main.html
@@ -10,7 +10,7 @@
     </ul>
     <h2>
       <a class="brand" href="#">Solrita.js</a>
-      <small style="margin-top:0px;white-space: nowrap">Backbone.js client for
+      <small id="subtitle">Backbone.js client for
         <a href="http://lucene.apache.org/solr/">Apache Solr</a>
       </small>
     </h2>
