--- a/assets/css/solrita.css
+++ b/assets/css/solrita.css
@@ -1,6 +1,10 @@
 body {
   margin: 0px 15px 0px 15px
 }
+#subtitle {
+	margin-top:0px;
+	white-space: nowrap;
+}
 #results {
   list-style-type:none;
   display:block;
@@ -33,3 +37,10 @@ body {
 		margin: 0px 5px 0px 5px;
   }
 }
+@media(max-width: 500px) {
+	#subtitle {
+		display: none;
+	}
+}
+
+
